--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
   <app-header></app-header>
-     <router-outlet></router-outlet>
+  <ng-container>
+    <router-outlet></router-outlet>
+  </ng-container>
   <app-footer></app-footer>
