--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,13 +8,15 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a [routerLinkActiveOptions]="{ exact: true }" class="nav-link" routerLink="home"
+          <a [routerLinkActiveOptions]="{ exact: true }" class="nav-link" routerLink="portail/home"
              routerLinkActive="active">Home</a>
         </li>
+
 
         <li class="nav-item">
           <a class="nav-link" routerLink="/portail/students" routerLinkActive="active">Eleves</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" routerLink="/portail/classes" routerLinkActive="active">Classes</a>
         </li>
