--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
   <app-header></app-header>
-  <ng-container>
-    <router-outlet></router-outlet>
-  </ng-container>
+   <div class="container">
+     <div class="wrapper">
+       <router-outlet></router-outlet>
+     </div>
+   </div>
   <app-footer></app-footer>
