--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -21,6 +21,10 @@
           <a class="nav-link" routerLink="/portail/classes" routerLinkActive="active">Classes</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/portail/enrollment" routerLinkActive="active">Inscription</a>
+        </li>
+
       </ul>
     </div>
   </div>
