--- a/src/app/frontoffice/components/home/home.component.html
+++ b/src/app/frontoffice/components/home/home.component.html
@@ -1,1 +1,74 @@
-<h1>Home</h1>
+<div class="row">
+  <div class="d-flex flex-row flex-stretch justify-content-center">
+    <h1> Application de gestion école </h1>
+  </div>
+
+</div>
+
+<!--div nbclass-->
+<div class="d-flex flex-row flex-stretch justify-content-center mt-3 mb-3">
+  <mat-card class="example-card mx-3">
+    <mat-card-title>  <button   mat-button  routerLink="/portail/students">Eleves</button>  </mat-card-title>
+    <img mat-card-image src="https://cdn.pixabay.com/photo/2016/03/31/18/04/asian-1294104_960_720.png" alt="Eleves">
+    <mat-card-content>
+      <h1 class="text-center">{{students.length}}</h1>
+    </mat-card-content>
+
+  </mat-card>
+  <mat-card class="example-card mx-3" >
+    <mat-card-title>  <button   mat-button  routerLink="/portail/classes">Classes</button>  </mat-card-title>
+    <img mat-card-image src="https://cdn.pixabay.com/photo/2016/07/27/15/43/education-1545578_960_720.png" alt="Classes">
+    <mat-card-content>
+      <h1 class="text-center">{{classes.length}}</h1>
+    </mat-card-content>
+
+  </mat-card>
+  <mat-card class="example-card mx-3">
+    <mat-card-title>  <button   mat-button  routerLink="/portail/enrollment">Inscrits</button>  </mat-card-title>
+    <img mat-card-image src="https://cdn.pixabay.com/photo/2013/07/13/12/43/kids-160168_960_720.png" alt="Inscrits">
+    <mat-card-content>
+      <h1 class="text-center">{{enrolls.length}}</h1>
+    </mat-card-content>
+
+  </mat-card>
+</div>
+<!--div nbclass-->
+<div class="d-flex flex-row flex-stretch justify-content-center">
+  <h1> Cinq derniers étudiants inscrits   </h1>
+</div>
+<!--table-->
+<div class="row">
+  <table class="table table-striped table-hover radius-bloc border-yellow">
+    <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Etudiant</th>
+      <th scope="col">Classe</th>
+      <th scope="col">Date d'inscription</th>
+
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let c of enrolls">
+      <th  >{{c?.id}}</th>
+      <td>{{getStudentByid(c.student_id)?.firstName +" "+getStudentByid(c.student_id)?.lastName }}</td>
+      <td>{{getClassByid(c.class_id)?.name }}</td>
+      <td>{{c.enrollDate | date:'d-m-yyy  HH:mm:ss'  }}</td>
+
+    </tr>
+
+    </tbody>
+  </table>
+
+</div>
+<div class="row d-flex justify-content-center">
+  <div class="col-md-3">
+    <button mat-raised-button color="primary" routerLink="/portail/enrollment">
+      Inscrire un etudiant
+    </button>
+  </div>
+
+</div>
+
+
+
