--- a/src/app/frontoffice/components/classes/classes.component.html
+++ b/src/app/frontoffice/components/classes/classes.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-8">
+  <div class="d-flex flex-row flex-stretch justify-content-center">
     <h1>Liste des classes</h1>
   </div>
   <div class="  col-md-4">
