--- a/src/app/frontoffice/components/enroll/enroll.component.html
+++ b/src/app/frontoffice/components/enroll/enroll.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-8 col-md-offset-4 ">
-    <h1>Liste des inscriptions</h1>
+  <div class="d-flex flex-row flex-stretch justify-content-center ">
+    <h1> Inscriptions</h1>
   </div>
 
 </div>
