--- a/src/app/frontoffice/components/enroll/enroll.component.html
+++ b/src/app/frontoffice/components/enroll/enroll.component.html
@@ -6,15 +6,16 @@
 </div>
 <!--form inscription-->
 
-  <form class="example-form" [formGroup]="formGroup">
-    <div class=" d-flex flex-row flex-stretch justify-content-center align-content-around align-items-stretch align-content-between flex-wrap ">
+<form [formGroup]="formGroup" class="example-form">
+  <div
+    class=" d-flex flex-row flex-stretch justify-content-center align-content-around align-items-stretch align-content-between flex-wrap ">
     <div class=" d-flex align-items-stretch mx-3">
-      <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Etudiant </mat-label>
-        <input matInput
+      <mat-form-field appearance="fill" class="example-full-width">
+        <mat-label>Etudiant</mat-label>
+        <input [matAutocomplete]="auto"
                aria-label="Student"
-               [matAutocomplete]="auto"
-               formControlName="student_id">
+               formControlName="student_id"
+               matInput>
         <mat-autocomplete #auto="matAutocomplete">
           <mat-option *ngFor="let c of filteredStudents | async" [value]="c.id">
             <span>{{c.firstName}}</span> &nbsp; <span>{{c.lastName}}</span>
@@ -23,35 +24,36 @@
       </mat-form-field>
     </div>
 
-    <div   >
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Classe </mat-label>
-      <input matInput
-             aria-label="Class"
-             [matAutocomplete]="auto2"
-             formControlName="class_id">
-      <mat-autocomplete #auto2="matAutocomplete">
-        <mat-option *ngFor="let c of filteredClasses | async" [value]="c.id">
-          <span>{{c.name}}</span>
-        </mat-option>
-      </mat-autocomplete>
+    <div>
+      <mat-form-field appearance="fill" class="example-full-width">
+        <mat-label>Classe</mat-label>
+        <input [matAutocomplete]="auto2"
+               aria-label="Class"
+               formControlName="class_id"
+               matInput>
+        <mat-autocomplete #auto2="matAutocomplete">
+          <mat-option *ngFor="let c of filteredClasses | async" [value]="c.id">
+            <span>{{c.name}}</span>
+          </mat-option>
+        </mat-autocomplete>
 
-    </mat-form-field>
+      </mat-form-field>
 
     </div>
-    <div class="mx-3 mt-2 justify-content-center "  >
+    <div class="mx-3 mt-2 justify-content-center ">
 
-      <button  [disabled]="!formGroup.valid"  (click)="inscrire()" type="button" mat-raised-button   >
-        <mat-icon class="edacy-yellow-color"  title="inscrire" aria-label="inscrire">
+      <button (click)="inscrire()" [disabled]="!formGroup.valid" mat-raised-button type="button">
+        <mat-icon aria-label="inscrire" class="edacy-yellow-color" title="inscrire">
           add
-        </mat-icon>Inscrire
+        </mat-icon>
+        Inscrire
       </button>
 
     </div>
 
 
-    </div>
-  </form>
+  </div>
+</form>
 
 
 <!--table-->
@@ -68,13 +70,14 @@
     </thead>
     <tbody>
     <tr *ngFor="let c of enrolls">
-      <th  >{{c?.id}}</th>
-      <td>{{getStudentByid(c.student_id)?.firstName +" "+getStudentByid(c.student_id)?.lastName }}</td>
+      <th>{{c?.id}}</th>
+      <td>{{getStudentByid(c.student_id)?.firstName + " " + getStudentByid(c.student_id)?.lastName }}</td>
       <td>{{getClassByid(c.class_id)?.name }}</td>
       <td>{{c.enrollDate | date:'short'   }}</td>
       <td class="left-bloc">
-        <button (click)="onCancelClick(c)" type="button" mat-raised-button>
-          <mat-icon class="edacy-red-color" title="Annuler" >delete</mat-icon>Annuler
+        <button (click)="onCancelClick(c)" mat-raised-button type="button">
+          <mat-icon class="edacy-red-color" title="Annuler">delete</mat-icon>
+          Annuler
         </button>
       </td>
     </tr>
