--- a/src/app/frontoffice/components/home/home.component.html
+++ b/src/app/frontoffice/components/home/home.component.html
@@ -68,7 +68,7 @@
 </div>
 <div class="row d-flex justify-content-center">
   <div class="col-md-3">
-    <button mat-raised-button color="primary" routerLink="/portail/enrollment">
+    <button color="primary" mat-raised-button routerLink="/portail/enrollment">
       Inscrire un etudiant
     </button>
   </div>
